--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@ img {
 	height: 200px;
 	border-radius: 200px;
 	margin-top: 8vh;
-	border: 3px solid #888;
+/* 	border: 3px solid #888; */
 }
 
 p {
