--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ body {
 .content {
 	width: 100%;
 	height: 100vh;
-	background: url(../img/bg.jpg) no-repeat center center fixed;
+	//background: url(../img/bg.jpg) no-repeat center center fixed;
 	background-color: rgba(0, 0, 0, 0);
 	background-size: auto auto;
 	-webkit-background-size: cover;
@@ -67,4 +67,8 @@ li {
 a{
 	color: white;
 	text-decoration: none;
+}
+a:hover{
+	color: #EEB422;
+	//text-decoration: none;
 }
