--- a/css/index.css
+++ b/css/index.css
@@ -4,46 +4,47 @@ body {
 	width: 100%;
 	height: 100%;
 	height: 100vh;
-	/*background: #000;*/
+	background: #0F0F0F;
 }
 
-.content {
+._body {
 	width: 100%;
 	height: 100vh;
-	//background: url(../img/bg.jpg) no-repeat center center fixed;
-	background-color: rgba(0, 0, 0, 0);
+	background: url(../img/bg1.jpg) no-repeat center center fixed;
 	background-size: auto auto;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	background-color: #000;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #fff;
 }
 
-.head {
+._head {
 	width: 100%;
-	height: 45vh;
+	height: 70vh;
 	text-align: center;
 }
 
-img {
+.tx {
 	width: 200px;
 	height: 200px;
 	border-radius: 200px;
 	margin-top: 8vh;
-/* 	border: 3px solid #888; */
 }
 
-p {
+.name {
 	font-size: 30px;
 	font-weight: bold;
 }
 
+.describe {
+	padding: 0 30px 0 30px;
+	line-height: 30px;
+}
+
 ._centent {
-	height: 55vh;
-	width: 100%;
+	height: 30vh;
 }
 
 ul,
@@ -53,22 +54,46 @@ li {
 }
 
 ul {
-	padding-top: 30px;
-/* 	margin-left: 20%; */
-	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center; //x轴排列
+	padding-bottom: 20upx;
 }
 
+
 li {
+	display: flex;
+	flex-direction: column;
 	cursor: pointer;
-	height: 40px;
+	height: 100px;
+	width: 100px;
 	line-height: 40px;
 	font-size: 16px;
+	text-align: center;
+	margin: 0 10px 30px 10px;
+	padding: 0 10px 0 10px;
 }
-a{
+
+li img {
+	width: 50px;
+	height: 50px;
+	margin-left: 25px;
+	border-radius: 10px;
+}
+
+li img:hover {
+	width: 70px;
+	height: 70px;
+	margin-left: 15px;
+}
+
+
+a {
 	color: white;
 	text-decoration: none;
 }
-a:hover{
+
+a:hover {
 	color: #EEB422;
-	//text-decoration: none;
+	text-decoration: none;
 }
