--- a/css/index.css
+++ b/css/index.css
@@ -8,9 +8,11 @@ body {
 }
 
 ._body {
+	position: absolute;
+	z-index: 998;
 	width: 100%;
 	height: 100vh;
-	background: url(../img/bg1.jpg) no-repeat center center fixed;
+	background: url(../img/bg2.jpg) no-repeat center center fixed;
 	background-size: auto auto;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -18,9 +20,13 @@ body {
 	background-size: cover;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #fff;
+	filter: blur(10px);
 }
 
+
 ._head {
+	position: relative;
+	z-index: 999;
 	width: 100%;
 	height: 70vh;
 	text-align: center;
@@ -31,19 +37,25 @@ body {
 	height: 200px;
 	border-radius: 200px;
 	margin-top: 8vh;
+	border: 3px solid #000;
 }
 
 .name {
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: bold;
+	color: #000;
 }
 
 .describe {
 	padding: 0 30px 0 30px;
 	line-height: 30px;
+	font-size: 20px;
+	color: #000;
 }
 
 ._centent {
+	position: relative;
+	z-index: 999;
 	height: 30vh;
 }
 
