--- a/css/index.css
+++ b/css/index.css
@@ -14,10 +14,11 @@ body {
 	height: 100vh;
 	background: url(../img/bg2.jpg) no-repeat center center fixed;
 	background-size: auto auto;
-	-webkit-background-size: cover;
+	background-repeat:no-repeat;
+/* 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover; */
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #fff;
 	filter: blur(10px);
@@ -82,8 +83,8 @@ li {
 	line-height: 40px;
 	font-size: 16px;
 	text-align: center;
-	margin: 0 10px 30px 10px;
-	padding: 0 10px 0 10px;
+	margin: 0 5px 30px 5px;
+	padding: 0 5px 0 5px;
 }
 
 li img {
