--- a/css/index.css
+++ b/css/index.css
@@ -13,14 +13,13 @@ body {
 	width: 100%;
 	height: 100vh;
 	background: url(../img/bg2.jpg) no-repeat center center fixed;
-	background-size: auto auto;
+	/* background-size: auto auto; */
 	background-repeat:no-repeat;
 /* 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover; */
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: #fff;
 	filter: blur(10px);
 }
 
@@ -57,7 +56,7 @@ body {
 ._centent {
 	position: relative;
 	z-index: 999;
-	height: 30vh;
+	/* height: 30vh; */
 }
 
 ul,
