--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body {
 	padding: 0px;
 	width: 100%;
 	height: 100%;
-	height: 100vh;
+	height: 100%;
 	background: #0F0F0F;
 }
 
@@ -11,10 +11,9 @@ body {
 	position: absolute;
 	z-index: 998;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background: url(../img/bg2.jpg) no-repeat center center fixed;
-	/* background-size: auto auto; */
-	background-repeat:no-repeat;
+	background-size: auto auto;
 /* 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -28,7 +27,6 @@ body {
 	position: relative;
 	z-index: 999;
 	width: 100%;
-	height: 70vh;
 	text-align: center;
 }
 
@@ -56,7 +54,7 @@ body {
 ._centent {
 	position: relative;
 	z-index: 999;
-	/* height: 30vh; */
+	margin-top: 100px;
 }
 
 ul,
