--- a/css/index.css
+++ b/css/index.css
@@ -4,28 +4,16 @@ body {
 	width: 100%;
 	height: 100%;
 	height: 100%;
-	background: #072146;
+	background: #21252B;
 }
 
 ._body {
-	position: absolute;
-	z-index: 998;
 	width: 100%;
 	height: 100%;
-	background: url(../img/bg2.jpg) no-repeat center center fixed;
-	background-size: auto auto;
-/* 	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover; */
-	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	filter: blur(10px);
 }
 
 
 ._head {
-	position: relative;
-	z-index: 999;
 	width: 100%;
 	text-align: center;
 }
@@ -35,20 +23,19 @@ body {
 	height: 200px;
 	border-radius: 200px;
 	margin-top: 8vh;
-	border: 3px solid #000;
+	color: white;
 }
 
 .name {
 	font-size: 35px;
-	font-weight: bold;
-	color: #000;
+	color: white;
 }
 
 .describe {
 	padding: 0 30px 0 30px;
 	line-height: 30px;
-	font-size: 20px;
-	color: #000;
+	font-size: 17px;
+	color: white;
 }
 
 ._centent {
